# breachcell

./: .astylerc  .clang-format  .gitignore  CMakeLists.txt  README.md  build_and_run.sh  main.cpp  run.sh  test_rotation_utils  test_rotation_utils.cpp  test_rotation_utils.h
.github/: copilot-instructions.md
engine/: engine.cpp  engine.h
engine/core/: igame.h
engine/ecs/: entity_manager.cpp  entity_manager.h
engine/graphics/: camera.cpp  camera_clamp_strategies.cpp  camera_smoothing_strategies.cpp  camera_tracking_strategies.cpp  circle_shape.cpp  circle_shape.h  icamera_clamp_strategy.h  icamera_smoothing_strategy.h  icamera_tracking_strategy.h  rectangle_shape.cpp  rectangle_shape.h  renderer.cpp  renderer.h  shape.h  shape_renderer.cpp  shape_renderer.h  texture.cpp  texture.h  window.cpp  window.h
engine/input/: input_system.cpp  input_system.h  keyboard_input.cpp  keyboard_input.h  mouse_input.cpp  mouse_input.h
engine/resources/: texture_manager.cpp  texture_manager.h
engine/utils/: timer.cpp  timer.h
game/: game.cpp  game.h
game/entities/: BoxFactory.cpp  BoxFactory.h  PlayerFactory.cpp  PlayerFactory.h
include/core/: camera_service.h  ecs_builder.h  engine.h  game_builder.h  game_facade.h  math_utils.h  platform_abstraction.h  render_builder.h
include/ecs/: components.h  entity_manager.h
include/factories/: enemy_factory.h  player_factory.h  projectile_builder.h  projectile_factory.h  wall_factory.h
include/input/: input_handler.h  input_state.h
include/render/: aiming_renderer.h  core_render_system.h  entity_renderer.h  (+4 more)
src/: main.cpp
(+60 files in other folders)
